--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
-    "dayjs": "^1.11.4",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.0",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
-    "miragejs": "^0.1.45",
-    "mockman-js": "^1.1.5",
+    "miragejs": "^0.1.43",
+    "mockman-js": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
